# xlayout

./: INSTALL  Makefile  Makefile.am  README  RELEASE  TODO  configure.ac  configure.in  install.sh  xlayout.1  xlayout.c  xlayout.h
man/: xlayout.1
src/: Makefile.am  xlayout.c  xlayout.h
